src/objects/CreditNote__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Revised Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PaymentInvoiceAmount__c</fullName>
        <formula>Payment__r.Invoice_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>Sub_Project__c</referenceTo>
        <relationshipLabel>Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorised</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XeroAmount__c</fullName>
        <label>Xero Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>XeroCreditNote__c</fullName>
        <formula>IF(!ISBLANK(XeroId__c), 
   HYPERLINK(&quot;https://go.xero.com/AccountsReceivable/EditCreditNote.aspx?creditNoteID=&quot; &amp; XeroId__c, 
   IF(!ISBLANK(XeroNumber__c), XeroNumber__c, &quot;View&quot;)), 
&quot;Not Available&quot;)</formula>
        <label>Xero Credit Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XeroEntity__c</fullName>
        <formula>IF(ISBLANK(Payment__r.Project__r.Xero_Entity__c), Payment__r.Account__r.Xero_Entity__c, Payment__r.Project__r.Xero_Entity__c)</formula>
        <label>Xero Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XeroId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Xero Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>XeroNumber__c</fullName>
        <label>Xero Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Note</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Credit Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>